--- a/charts/node/templates/shared-secret.yaml
+++ b/charts/node/templates/shared-secret.yaml
@@ -14,9 +14,8 @@ data:
   arbitrum-key: {{ required "Please provide an arbitrum key; --set common.keys.arbitrumKey" .Values.common.keys.arbitrumKey | b64enc | quote }} 
   node-key: {{ required "Please provide a node key; --set common.keys.nodeKey" .Values.common.keys.nodeKey | b64enc | quote }}
 {{- end }}
-{{- end }}
 
-{{- if eq .Values.common.role "lp" }}
+{{- else if eq .Values.common.role "lp" }}
 {{- $existingSecret := .Values.common.keys.existingSecret }}
 {{- $generateKeysOnStart := .Values.common.keys.generateKeysOnStart }}
 {{- if ne (eq $existingSecret "") $generateKeysOnStart }}
@@ -27,7 +26,6 @@ metadata:
   labels:
     {{- include "node.labels" . | nindent 4 }}
 data:
-  lp-key: {{ required "Please provide a  key; --set common.keys.lpKey"  .Values.common.keys.lpKey | b64enc | quote}}
-{{- end }}
+  signing-key: {{ required "Please provide a signing key; --set common.keys.signingKey"  .Values.common.keys.signingKey | b64enc | quote}}
 {{- end }}
 {{- end }}
