hardcode pruning, fix cli key creation

--- a/charts/node/templates/hook-create-keys.yaml
+++ b/charts/node/templates/hook-create-keys.yaml
@@ -27,7 +27,7 @@ spec:
       {{- end }}
       initContainers:
         - name: create-keys
-          image: "chainfliplabs/chainflip-cli:{{ .Values.network.chain.name }}"
+          image: "{{ include "chainflip-cli.image" . }}"
           securityContext:
             allowPrivilegeEscalation: false
           volumeMounts:
@@ -64,12 +64,13 @@ spec:
             - /bin/sh
             - -c
             - |
+              set -x
               if ! kubectl get secret {{ include "node.fullname" . }}; then
                 echo "Secret does not exist, creating..."
                 kubectl create secret generic {{ include "node.fullname" . }} \
                   --from-file=/tmp/signing-key \
                   --from-file=/tmp/node-key \
-                  --from-file=/tmp/ethereum-key \
+                  --from-file=/tmp/ethereum-key
               else
                 echo "Secret already exists, skipping..."
               fi
