--- a/charts/node/templates/shared-secret.yaml
+++ b/charts/node/templates/shared-secret.yaml
@@ -15,7 +15,7 @@ data:
   node-key: {{ required "Please provide a node key; --set common.keys.nodeKey" .Values.common.keys.nodeKey | b64enc | quote }}
 {{- end }}
 
-{{- else if eq .Values.common.role "lp" }}
+{{- else if or (eq .Values.common.role "lp") (eq .Values.common.role "broker") }}
 {{- $existingSecret := .Values.common.keys.existingSecret }}
 {{- $generateKeysOnStart := .Values.common.keys.generateKeysOnStart }}
 {{- if ne (eq $existingSecret "") $generateKeysOnStart }}
