fix keys volumes

--- a/charts/node/templates/hook-create-keys.yaml
+++ b/charts/node/templates/hook-create-keys.yaml
@@ -65,14 +65,13 @@ spec:
             - -c
             - |
               set -x
-              if ! kubectl get secret {{ include "node.fullname" . }}; then
-                echo "Secret does not exist, creating..."
-                kubectl create secret generic {{ include "node.fullname" . }} \
-                  --from-file=/tmp/signing-key \
-                  --from-file=/tmp/node-key \
-                  --from-file=/tmp/ethereum-key
-              else
-                echo "Secret already exists, skipping..."
+              output=$(kubectl create secret generic {{ include "node.fullname" . }} \
+                --from-file=/tmp/signing-key \
+                --from-file=/tmp/node-key \
+                --from-file=/tmp/ethereum-key 2>&1)
+              if echo "$output" | grep -q "already exists"; then
+                  echo "Secret already exists, skipping..."
+                  exit 0
               fi
       volumes:
         - name: keys
