--- a/charts/node/templates/shared-secret.yaml
+++ b/charts/node/templates/shared-secret.yaml
@@ -14,4 +14,18 @@ data:
   arbitrum-key: {{ required "Please provide an arbitrum key; --set common.keys.arbitrumKey" .Values.common.keys.arbitrumKey | b64enc | quote }} 
   node-key: {{ required "Please provide a node key; --set common.keys.nodeKey" .Values.common.keys.nodeKey | b64enc | quote }}
 {{- end }}
+
+{{- else if or ( eq .Values.common.role "lp") (eq .Values.common.role "broker") }}
+{{- $existingSecret := .Values.common.keys.existingSecret }}
+{{- $generateKeysOnStart := .Values.common.keys.generateKeysOnStart }}
+{{- if ne (eq $existingSecret "") $generateKeysOnStart }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "node.fullname" . }}
+  labels:
+    {{- include "node.labels" . | nindent 4 }}
+data:
+  signing-key: {{ required "Please provide a signing key; --set common.keys.signingKey"  .Values.common.keys.signingKey | b64enc | quote}}
+{{- end }}
 {{- end }}
